# greentic-secrets

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY_FIX_REPORT.md  all-code-scanning-alerts.json  audit_exporter.json  codex-prompt.txt  coverage-policy.json  federated-master.json  federated-pr.json  federated.json  packs.lock.json  pr-changed-files.txt  pr-code-scanning-filtered.json  pr-comment.md  security-alerts.json
.codex/: PR-10-runtime-provider-binding-contract.md  SecretsValWasmPR-01.md
.codex/done/: PR-01.md  PR-02.md  PR-03.md  PR-04.md  PR-05.md  PR-06.md  PR-07.md  SecretsValWasmPR-01.md
.github/workflows/: auto-tag.yml  binstall-release.yml  check-package.yml  ci-live.yml  ci.yml  codex-security-fix.yml  codex-semver-fix.yml  coverage.yml  dev-publish.yml  infra-validate.yml  nightly-pack-smoke.yml  nightly-semver.yml  perf.yml  pipeline.yml  provider-packs.yml  publish-components.yml  publish.yml  secrets-providers.yml  validators.yml
ci/: check_crypto_deps.sh  local_check.sh
components/secrets-audit-exporter/: Cargo.toml
components/secrets-audit-exporter/src/: lib.rs
components/secrets-generators/: Cargo.toml
components/secrets-generators/src/: lib.rs
components/secrets-policy-validator/: Cargo.toml
components/secrets-policy-validator/src/: lib.rs
components/secrets-provider-k8s/src/: lib.rs
conformance/: Cargo.toml
conformance/src/: lib.rs
crates/greentic-secrets/: Cargo.toml
crates/greentic-secrets-cli/: Cargo.toml  README.md
crates/greentic-secrets-cli/src/: lib.rs  passphrase.rs
crates/greentic-secrets-pack-validator/: Cargo.toml
crates/greentic-secrets-pack-validator/src/: lib.rs
crates/greentic-secrets-passphrase/: Cargo.toml  README.md
crates/greentic-secrets-passphrase/src/: error.rs  header.rs  kdf.rs  lib.rs  prompt.rs  secret_bytes.rs  source.rs
crates/greentic-secrets-runner/: Cargo.toml
crates/greentic-secrets-runner/tests/: pack_validation.rs
crates/greentic-secrets-runner/tests/fixtures/minimal-secrets-pack/: pack.yaml  secret-requirements.json
crates/greentic-secrets-test/: Cargo.toml
crates/greentic-secrets-test/src/: lib.rs
crates/greentic-secrets-test/tests/: dry_run.rs
crates/greentic-secrets-validate/: Cargo.toml
crates/greentic-secrets-validate/src/: lib.rs
crates/greentic-secrets/src/: admin.rs  component_runner.rs  main.rs
crates/greentic-secrets/tests/: setup_cli.rs
crates/secrets-provider-tests/: Cargo.toml
crates/secrets-provider-tests/src/: env.rs  fixtures.rs
docs/: broker_admin_api_e2e.md  operator_capability_migration.md  pack-validation.md  security.md  seed-format.md
docs/ci/: aws-oidc.md  azure-oidc.md  gcp-wif.md
greentic-secrets-api/: Cargo.toml
greentic-secrets-broker/: Cargo.toml  README.md
greentic-secrets-broker/examples/plugins/: weather_secrets.rs
greentic-secrets-broker/src/: auth.rs  error.rs  http.rs  lib.rs  path.rs
greentic-secrets-broker/tests/support/: auth.rs
greentic-secrets-core/: Cargo.toml
greentic-secrets-core/benches/: perf.rs
greentic-secrets-core/examples/: specs_cli.rs
greentic-secrets-core/examples/plugins/: telegram_secrets.rs
greentic-secrets-core/src/: embedded.rs  generators.rs  lib.rs  provision.rs  resolver.rs  seed.rs  sink.rs
greentic-secrets-core/src/backend/: file.rs
greentic-secrets-core/src/crypto/: envelope.rs
greentic-secrets-core/tests/: perf_scaling.rs  perf_timeout.rs
greentic-secrets-lib/: Cargo.toml
greentic-secrets-lib/src/: lib.rs
greentic-secrets-spec/: Cargo.toml
greentic-secrets-spec/src/: error.rs  generation.rs  lib.rs  provider_binding.rs  refs.rs  uri.rs
packs/aws-sm/: README.md  gtpack.yaml  metadata.json  pack.yaml  secret-requirements.json
packs/aws-sm/fixtures/: requirements.expected.json  setup.expected.plan.json  setup.input.json
packs/aws-sm/flows/: provider_breakglass.ygtc  provider_export_audit.ygtc  provider_onboard.ygtc  provider_read_secret.ygtc  provider_rotate_secret.ygtc  provider_validate.ygtc  provider_write_secret.ygtc
packs/aws-sm/wasm/: setup_default__apply.wat  setup_default__collect.wat  setup_default__requirements.wat
packs/azure-kv/: README.md  gtpack.yaml  metadata.json  pack.yaml  secret-requirements.json
packs/azure-kv/fixtures/: requirements.expected.json  setup.expected.plan.json  setup.input.json
packs/azure-kv/flows/: provider_breakglass.ygtc  provider_export_audit.ygtc  provider_onboard.ygtc  provider_read_secret.ygtc  provider_rotate_secret.ygtc  (+2 more)
packs/gcp-sm/: README.md  gtpack.yaml  metadata.json  pack.yaml  secret-requirements.json
packs/k8s/: gtpack.yaml  pack.yaml  secret-requirements.json
packs/vault-kv/: gtpack.yaml  pack.yaml  secret-requirements.json
providers/greentic-aws-sm/: Cargo.toml
providers/greentic-aws-sm/src/: lib.rs
providers/greentic-aws-sm/tests/: conformance.rs
providers/greentic-azure-kv/: Cargo.toml
providers/greentic-azure-kv/src/: lib.rs
providers/greentic-azure-kv/tests/: conformance.rs
providers/greentic-dev/: Cargo.toml
providers/greentic-dev/src/: backend.rs  dev_provider.rs  lib.rs  marker.rs  passphrase_provider.rs  persistence.rs  state.rs
providers/greentic-dev/tests/: conformance.rs  passphrase_roundtrip.rs
providers/greentic-gcp-sm/: Cargo.toml
providers/greentic-gcp-sm/src/: lib.rs
providers/greentic-gcp-sm/tests/: conformance.rs
providers/greentic-k8s/: Cargo.toml
providers/greentic-k8s/src/: lib.rs
providers/greentic-k8s/tests/: conformance.rs
providers/greentic-vault-kv/: Cargo.toml
providers/greentic-vault-kv/src/: identity.rs  lib.rs
providers/greentic-vault-kv/tests/: conformance.rs
schemas/secrets/: provider-binding.schema.json
scripts/: audit-capability-offers.sh  build-components.sh  build-provider-packs.sh  build-validator-component.sh  build-validator-pack.sh  e2e_broker_admin_api.sh  generate-flow-resolve-summary.py  generate-provision-flows.py  publish-components.sh  publish-provider-packs-local.sh  publish-provider-packs.sh  publish-validators.sh  validate-packs.sh
validators/secrets/: gtpack.yaml  pack.yaml
(+42 files in other folders)
