[workspace]
members = [
    "components/secrets-audit-exporter",
    "components/secrets-generators",
    "components/secrets-policy-validator",
    "components/secrets-provider-inmemory",
    "components/secrets-provider-aws-sm",
    "components/secrets-provider-azure-kv",
    "components/secrets-provider-gcp-sm",
    "components/secrets-provider-k8s",
    "components/secrets-provider-vault-kv",
    "greentic-secrets-api",
    "greentic-secrets-spec",
    "greentic-secrets-core",
    "greentic-secrets-broker",
    "greentic-secrets-lib",
    "conformance",
    "crates/greentic-secrets-runner",
    "crates/greentic-secrets-test",
    "crates/secrets-provider-tests",
    "providers/greentic-dev",
    "providers/greentic-aws-sm",
    "providers/greentic-gcp-sm",
    "providers/greentic-azure-kv",
    "providers/greentic-k8s",
    "providers/greentic-vault-kv",
    "crates/greentic-secrets",
    "crates/greentic-secrets-validate",
    "crates/greentic-secrets-pack-validator",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
version = "1.2.0-dev.0"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
async-nats = "0.49"
async-trait = "0.1"
axum = "0.8"
aws-config = "1"
aws-sdk-kms = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-secretsmanager = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-smithy-types = "1"
aws-types = "1"
base64 = "0.22"
clap = "4"
criterion = "0.8"
fs2 = "0.4"
futures = "0.3"
hex = "0.4"
hkdf = "0.13"
handlebars = "6"
hyper = "1"
jsonwebtoken = { version = "10", default-features = false }
lru = "0.18"
indexmap = "2"
once_cell = "1"
parking_lot = "0.12"
ring = "0.17"
schemars = "1"
serde_json = "1"
serde_cbor = "0.11"
serial_test = "3"
sha2 = "0.11"
semver = "1"
tempfile = "3"
thiserror = "2"
toml = "1"
time = "0.3"
tower = "0.5"
tower-http = "0.7"
tracing = "0.1.31"
predicates = "3"
jsonschema = "0.46"
azure_identity = { package = "azure_identity", version = "1" }
azure_security_keyvault_secrets = { package = "azure_security_keyvault_secrets", version = "1" }
azure_core = "1"
google-cloud-secretmanager-v1 = "1"
k8s-openapi = { version = "0.28", default-features = false, features = ["v1_32"] }
kube = { version = "4", default-features = false, features = ["client", "runtime", "derive", "rustls-tls"] }
rustls-pemfile = "2"
url = "2"
uuid = "1"
wit-bindgen = "0.58"
wasmtime = { version = "45", features = ["cranelift"] }
wasmparser = { version = "0.252", default-features = false, features = ["component-model"] }
wat = "1"

[workspace.dependencies.rand]
version = "0.10"
features = [
    "std",
]

[workspace.dependencies.reqwest]
version = "0.13"
default-features = false

[workspace.dependencies.rustls]
version = "0.23"
default-features = false

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.serde_yaml]
package = "serde_yaml_gtc"
version = "2"

[workspace.dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "net",
]

[workspace.dependencies.vaultrs]
version = "0.8"
default-features = false
features = [
    "rustls",
]

[workspace.dependencies.secrets-provider-inmemory]
version = "0.1"
path = "components/secrets-provider-inmemory"

[workspace.dependencies.greentic-types]
version = ">=1.2.0-dev, <1.3.0-0"
default-features = false
features = [
    "std",
    "serde",
    "telemetry-autoinit",
]

[workspace.dependencies.zip]
version = "8"
default-features = false

[workspace.dependencies.greentic_secrets_api]
package = "greentic-secrets-api"
version = ">=1.2.0-dev, <1.3.0-0"
path = "greentic-secrets-api"

[workspace.dependencies.greentic_secrets_spec]
package = "greentic-secrets-spec"
version = ">=1.2.0-dev, <1.3.0-0"
path = "greentic-secrets-spec"

[workspace.dependencies.greentic_secrets_core]
package = "greentic-secrets-core"
version = ">=1.2.0-dev, <1.3.0-0"
path = "greentic-secrets-core"

[workspace.dependencies.greentic_secrets_broker]
package = "greentic-secrets-broker"
version = ">=1.2.0-dev, <1.3.0-0"
path = "greentic-secrets-broker"

[workspace.dependencies.secrets_broker]
package = "greentic-secrets-broker"
version = ">=1.2.0-dev, <1.3.0-0"
path = "greentic-secrets-broker"

[workspace.dependencies.greentic_secrets_lib]
package = "greentic-secrets-lib"
version = ">=1.2.0-dev, <1.3.0-0"
path = "greentic-secrets-lib"

[workspace.dependencies.greentic_secrets_provider_dev]
package = "greentic-secrets-provider-dev"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-dev"

[workspace.dependencies.greentic_secrets_provider_aws_sm]
package = "greentic-secrets-provider-aws-sm"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-aws-sm"

[workspace.dependencies.greentic_secrets_provider_gcp_sm]
package = "greentic-secrets-provider-gcp-sm"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-gcp-sm"

[workspace.dependencies.greentic_secrets_provider_azure_kv]
package = "greentic-secrets-provider-azure-kv"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-azure-kv"

[workspace.dependencies.greentic_secrets_provider_k8s]
package = "greentic-secrets-provider-k8s"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-k8s"

[workspace.dependencies.greentic_secrets_provider_vault_kv]
package = "greentic-secrets-provider-vault-kv"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-vault-kv"

[workspace.dependencies.secrets-core]
package = "greentic-secrets-core"
version = ">=1.2.0-dev, <1.3.0-0"
path = "greentic-secrets-core"

[workspace.dependencies.secrets-provider-dev]
package = "greentic-secrets-provider-dev"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-dev"

[workspace.dependencies.secrets-provider-aws-sm]
package = "greentic-secrets-provider-aws-sm"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-aws-sm"

[workspace.dependencies.secrets-provider-gcp-sm]
package = "greentic-secrets-provider-gcp-sm"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-gcp-sm"

[workspace.dependencies.secrets-provider-azure-kv]
package = "greentic-secrets-provider-azure-kv"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-azure-kv"

[workspace.dependencies.secrets-provider-k8s]
package = "greentic-secrets-provider-k8s"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-k8s"

[workspace.dependencies.secrets-provider-vault-kv]
package = "greentic-secrets-provider-vault-kv"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-vault-kv"

[workspace.dependencies.greentic_secrets_provider_aws]
package = "greentic-secrets-provider-aws-sm"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-aws-sm"

[workspace.dependencies.greentic_secrets_provider_azure]
package = "greentic-secrets-provider-azure-kv"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-azure-kv"

[workspace.dependencies.greentic_secrets_provider_gcp]
package = "greentic-secrets-provider-gcp-sm"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-gcp-sm"

[workspace.dependencies.greentic_secrets_provider_vault]
package = "greentic-secrets-provider-vault-kv"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-vault-kv"

[workspace.dependencies.greentic_secrets_provider_dev_env]
package = "greentic-secrets-provider-dev"
version = ">=1.2.0-dev, <1.3.0-0"
path = "providers/greentic-dev"

[workspace.dependencies.secrets-provider-tests]
path = "crates/secrets-provider-tests"

[workspace.dependencies.greentic-config-types]
version = ">=1.2.0-dev, <1.3.0-0"

[workspace.dependencies.greentic-config]
version = ">=1.2.0-dev, <1.3.0-0"

[workspace.dependencies.greentic_types_validate]
package = "greentic-types"
version = ">=1.2.0-dev, <1.3.0-0"
default-features = false
features = [
    "serde",
    "std",
]

[workspace.dependencies.greentic-interfaces]
version = ">=0.5, <0.7.0-0"
default-features = false
features = [
    "bindings-rust",
    "provider-core-v1",
]

[workspace.dependencies.greentic-interfaces-wasmtime]
version = ">=0.5, <0.7.0-0"
