[package]
name = "greentic-secrets-api"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Shared traits and types for Greentic secrets backends."
repository = "https://github.com/greenticai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-api"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[features]
default = ["std"]
std = ["anyhow"]

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true, optional = true }

