[package]
name = "greentic-secrets-broker"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "HTTP and NATS broker exposing Greentic secrets to applications."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-broker"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_broker"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true, features = ["macros", "json"] }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
hyper = { workspace = true, features = ["full"] }
jsonwebtoken = { workspace = true, default-features = false, features = ["use_pem", "rust_crypto"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls"] }
rustls = { workspace = true, default-features = false, features = ["std"] }
ring = { workspace = true, features = ["std"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
greentic-types = { workspace = true }
greentic-config = { workspace = true }
greentic-config-types = { workspace = true }
secrets-core = { workspace = true }
secrets-provider-dev = { workspace = true }
secrets-provider-aws-sm = { workspace = true, optional = true }
secrets-provider-gcp-sm = { workspace = true, optional = true }
secrets-provider-azure-kv = { workspace = true, optional = true }
secrets-provider-k8s = { workspace = true, optional = true }
secrets-provider-vault-kv = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
ring = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[features]
default = []
aws-sm = ["secrets-provider-aws-sm"]
gcp-sm = ["secrets-provider-gcp-sm"]
azure-kv = ["secrets-provider-azure-kv"]
k8s = ["secrets-provider-k8s"]
vault-kv = ["secrets-provider-vault-kv"]
