[package]
name = "greentic-secrets-core"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Core runtime and backend orchestration for Greentic secrets."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-core"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[features]
default = ["use_spec", "crypto-ring", "dev-store"]
use_spec = []
crypto-ring = ["dep:ring"]
crypto-none = []
env = []
file = []
k8s = []
aws = ["imds"]
gcp = []
azure = []
imds = []
nats = ["dep:async-nats", "dep:futures"]
schema = ["schemars", "greentic_secrets_spec/schema"]
schema-validate = ["dep:jsonschema"]
dev-store = ["dep:greentic_secrets_provider_dev"]

xchacha = []

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, optional = true }
base64 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true, features = ["std"] }
lru = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
async-nats = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls", "query", "form"] }
tracing = { workspace = true }
greentic_secrets_api = { workspace = true }
greentic_secrets_spec = { workspace = true }
ring = { workspace = true, optional = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
greentic-types = { workspace = true }
async-trait = { workspace = true }
jsonschema = {workspace = true , optional = true }
greentic_secrets_provider_dev = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
wit-bindgen = { workspace = true }
greentic-types = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lib]
name = "secrets_core"
crate-type = ["rlib"]
