[package]
name = "greentic-secrets-lib"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Umbrella crate re-exporting Greentic secrets spec, core runtime, and optional providers."
repository = "https://github.com/greenticai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-lib"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[features]
default = ["core", "spec", "env"]
core = ["dep:greentic_secrets_core"]
spec = ["dep:greentic_secrets_spec"]
env = [
	"dep:async-trait",
]
providers-aws = ["dep:greentic_secrets_provider_aws"]
providers-azure = ["dep:greentic_secrets_provider_azure"]
providers-gcp = ["dep:greentic_secrets_provider_gcp"]
providers-k8s = ["dep:greentic_secrets_provider_k8s"]
providers-vault = ["dep:greentic_secrets_provider_vault"]
providers-dev = ["dep:greentic_secrets_provider_dev_env"]

[dependencies]
greentic_secrets_spec = { workspace = true, optional = true }
greentic_secrets_core = { workspace = true, optional = true }
greentic_secrets_provider_aws = { workspace = true, optional = true }
greentic_secrets_provider_azure = { workspace = true, optional = true }
greentic_secrets_provider_gcp = { workspace = true, optional = true }
greentic_secrets_provider_k8s = { workspace = true, optional = true }
greentic_secrets_provider_vault = { workspace = true, optional = true }
greentic_secrets_provider_dev_env = { workspace = true, optional = true }
greentic-types = { workspace = true }
greentic_secrets_api = { workspace = true }
async-trait = { workspace = true, optional = true }

[dev-dependencies]
futures = { workspace = true }
