[package]
name = "greentic-secrets-spec"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Canonical traits and data models for Greentic secrets (read/write, versioning, metadata)."
repository = "https://github.com/greenticai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-spec"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde", "dep:serde_json"]
schema = ["dep:schemars", "greentic-types/schema"]

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
time = { workspace = true }
schemars = { workspace = true, optional = true }
greentic-types = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
serde_json = { workspace = true }

