[package]
name = "greentic-secrets-pack-validator"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "WASM pack validator enforcing secrets-domain safety rules."
repository = "https://github.com/greenticai/greentic-secrets"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
greentic-types = { workspace = true }
wit-bindgen = { workspace = true }

[dev-dependencies]
semver = { workspace = true }
serde_json = { workspace = true }
