[package]
name = "greentic-secrets-runner"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Host bridge for environment-backed secrets with tenant policy enforcement."
repository = "https://github.com/greenticai/greentic-secrets"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
thiserror = { workspace = true }
greentic-types = { workspace = true }
serde_yaml = { workspace = true }
zip = { workspace = true, features = ["deflate"] }

[dev-dependencies]
greentic-interfaces = { workspace = true, default-features = false, features = ["bindings-rust", "provider-core-v1"] }
serde_json = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
