[package]
name = "greentic-secrets-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Conformance runner for Greentic secrets packs."
repository = "https://github.com/greenticai/greentic-secrets"

[[bin]]
name = "greentic-secrets-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = { workspace = true }
greentic-types = { workspace = true }
wasmtime = { version = "41", features = ["cranelift"] }
wat = "1"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
indexmap = { workspace = true }
semver = { workspace = true }
