[package]
name = "greentic-secrets-validate"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Secrets domain pack validators for Greentic packs."
repository = "https://github.com/greentic-ai/greentic-secrets"

[dependencies]
greentic_types_validate = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
semver = { workspace = true }
